AGGRESSIVE spacing fix - use !important to override browser defaults causing 50px gap

--- a/public/style.css
+++ b/public/style.css
@@ -472,6 +472,27 @@ button {
   margin-top: 0px;
 }
 
+/* Force remove all spacing in customer cards */
+.customer-card p {
+  margin-top: 0px !important;
+  padding-top: 0px !important;
+}
+
+.customer-card .customer-header {
+  margin-bottom: 0px !important;
+  padding-bottom: 0px !important;
+}
+
+.customer-card .customer-content {
+  margin-top: 0px !important;
+  padding-top: 0px !important;
+}
+
+.customer-card .customer-info {
+  margin-top: 0px !important;
+  padding-top: 0px !important;
+}
+
 /* Job Detail Tabs */
 .job-tabs {
   display: flex;
